project (main_jportal)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

if (UNIX)
  exec_program (uname OUTPUT_VARIABLE SYSTEM_NAME)
  set (SYSTEM_NAME "${SYSTEM_NAME}" CACHE INTERNAL "")
  if (SYSTEM_NAME STREQUAL "Linux")
    set (LINUX ON)
  elseif (SYSTEM_NAME STREQUAL "FreeBSD")
    set (FREEBSD ON)
  else ()
    set (AIX ON)
  endif ()
endif ()

if (LINUX)
  message (STATUS "LINUX")
  set (switches " -g -fPIC -Wno-write-strings -fpermissive")
  list (APPEND CMAKE_C_FLAGS "${switches}")
  list (APPEND CMAKE_CXX_FLAGS "${switches}")
  string (REPLACE ";" " " CMAKE_C_FLAGS   ${CMAKE_C_FLAGS})
  string (REPLACE ";" " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
  set (switches " -pthread")
  list (APPEND CMAKE_EXE_LINKER_FLAGS "${switches}")
  list (APPEND CMAKE_MODULE_LINKER_FLAGS "${switches}")
  list (APPEND CMAKE_SHARED_LINKER_FLAGS "${switches}")
  string (REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS    ${CMAKE_EXE_LINKER_FLAGS})
  string (REPLACE ";" " " CMAKE_MODULE_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS})
  string (REPLACE ";" " " CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS})
elseif (MINGW)
elseif (WIN32)
  message (STATUS "WIN32")
  add_definitions (
    -D_CRT_SECURE_NO_WARNINGS
    -D_SCL_SECURE_NO_WARNINGS
    )
  string (REPLACE "/MD" "/MT" CMAKE_C_FLAGS_DEBUG            ${CMAKE_C_FLAGS_DEBUG})
  string (REPLACE "/MD" "/MT" CMAKE_C_FLAGS_MINSIZEREL       ${CMAKE_C_FLAGS_MINSIZEREL})
  string (REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELEASE          ${CMAKE_C_FLAGS_RELEASE})
  string (REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELWITHDEBINFO   ${CMAKE_C_FLAGS_RELWITHDEBINFO})
  string (REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_DEBUG          ${CMAKE_CXX_FLAGS_DEBUG})
  string (REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_MINSIZEREL     ${CMAKE_CXX_FLAGS_MINSIZEREL})
  string (REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE        ${CMAKE_CXX_FLAGS_RELEASE})
  string (REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
endif ()

find_package (PythonInterp)
find_package (Java)
if (WIN32)
  set (ANT_EXECUTABLE C:/apache-ant/bin/ant CACHE PATH "Ant Executable")
  set (POSTGRES_EXECUTABLE C:/PostgreSQL/bin/psql.exe CACHE PATH "postgresql executable")
  set (MYSQL_EXECUTABLE C:/MariaDB/bin/mysql.exe CACHE PATH "mysql mariadb executable")
else ()
  set (ANT_EXECUTABLE /usr/bin/ant       CACHE PATH "Ant Executable")
  set (POSTGRES_EXECUTABLE /usr/bin/psql CACHE PATH "postgresql executable")
  set (MYSQL_EXECUTABLE /usr/bin/mysql   CACHE PATH "mysql mariadb executable")
endif ()

set (TOOLS_DIR ${CMAKE_SOURCE_DIR}/tools)

set (ANYDBTEST_SOURCE_DIR ${CMAKE_SOURCE_DIR}/anydbtest)
set (ANYDBTEST_BINARY_DIR ${CMAKE_BINARY_DIR}/anydbtest)

set (BINUC_SOURCE_DIR ${CMAKE_SOURCE_DIR}/binuc)
set (BINUC_BINARY_DIR ${CMAKE_BINARY_DIR}/binuc)

set (BINUJ_SOURCE_DIR ${CMAKE_SOURCE_DIR}/binuj)
set (BINUJ_BINARY_DIR ${CMAKE_BINARY_DIR}/binuj)

set (DECOMPILERS_SOURCE_DIR ${CMAKE_SOURCE_DIR}/decompilers)
set (DECOMPILERS_BINARY_DIR ${CMAKE_BINARY_DIR}/decompilers)

set (GENERATORS_SOURCE_DIR ${CMAKE_SOURCE_DIR}/generators)
set (GENERATORS_BINARY_DIR ${CMAKE_BINARY_DIR}/generators)

set (IDL2TESTER_SOURCE_DIR ${CMAKE_SOURCE_DIR}/idl2tester)
set (IDL2TESTER_BINARY_DIR ${CMAKE_BINARY_DIR}/idl2tester)

set (LOYALTY_SOURCE_DIR ${CMAKE_SOURCE_DIR}/loyalty)
set (LOYALTY_BINARY_DIR ${CMAKE_BINARY_DIR}/loyalty)

set (PICKTESTER_SOURCE_DIR ${CMAKE_SOURCE_DIR}/picktester)
set (PICKTESTER_BINARY_DIR ${CMAKE_BINARY_DIR}/picktester)

set (PY3PORT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/py3port)
set (PY3PORT_BINARY_DIR ${CMAKE_BINARY_DIR}/py3port)

set (SPROCS_SOURCE_DIR ${CMAKE_SOURCE_DIR}/sprocs)
set (SPROCS_BINARY_DIR ${CMAKE_BINARY_DIR}/sprocs)

include (${CMAKE_SOURCE_DIR}/cmake/functions.cmake)

add_subdirectory(generators)
add_subdirectory(anydbtest)
add_subdirectory(py3port)
add_subdirectory(decompilers)
add_subdirectory(utility)
add_subdirectory(loyalty)
add_subdirectory(idl2tester)
add_subdirectory(binuc)
add_subdirectory(binuj)
add_subdirectory(picktester)
add_subdirectory(demo)
add_subdirectory(sprocs)
